--- a/src/assets/Style/Nav.module.scss
+++ b/src/assets/Style/Nav.module.scss
@@ -6,7 +6,7 @@
 .navigation {
     display: grid;
     grid-template-columns: auto auto auto;
-    // background-color: $background;
+    background-color: red;
 
 
 
@@ -107,12 +107,12 @@
     top: 5vh;
     width: 90%;
     padding: 1em;
-    border: 1px solid $primærknap;
-    background-color: $knapbg;
+    border: 1px solid #000;
+    background-color: #000;
 
     .navigationLinks {
         text-decoration: none;
-        color: $white;
+        color: #fff;
         font-size: 1em;
     }
 
