Header plus text

--- a/src/assets/Style/Footer.module.scss
+++ b/src/assets/Style/Footer.module.scss
@@ -1,4 +1,11 @@
 @import '../Helpers/mixin';
 @import '../Helpers/variabler';
 
-footer {}
+footer {
+    background-color: black;
+    position: sticky;
+
+    width: 100%;
+
+
+}
