--- a/src/assets/Style/Nav.module.scss
+++ b/src/assets/Style/Nav.module.scss
@@ -4,32 +4,44 @@
 //Fuld navigation
 
 .navigation {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    background-color: red;
 
-
+    text-align: center;
 
     @media (width < $large) {
         display: none;
     }
 
     .ulwrapper {
+        display: block;
+        margin: auto;
 
 
         li {
             display: inline-block;
             padding: 1vw;
+            margin: 1em;
+            text-align: center;
+            background-color: #fff;
+            border-radius: 1em;
 
+            &:hover {
+                cursor: pointer;
+                -webkit-animation: pulsate-fwd 0.5s ease-in-out infinite both;
+                animation: pulsate-fwd 0.5s ease-in-out infinite both;
+            }
 
             a {
                 text-decoration: none;
-                font-size: 15pt;
-                color: #fff;
+                font-size: 17pt;
+                color: #F4D4C9;
+                -webkit-text-fill-color: #F4D4C9;
+                -webkit-text-stroke-width: 0.2px;
+                -webkit-text-stroke-color: rgb(220, 129, 129);
+
 
                 &:hover {
                     cursor: pointer;
-                    color: black;
+
                 }
             }
 
@@ -37,6 +49,40 @@
     }
 }
 
+
+@-webkit-keyframes pulsate-fwd {
+    0% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+
+    50% {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@keyframes pulsate-fwd {
+    0% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+
+    50% {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
 
 //Størrelse og placering af wrapper
 .burgerMenu {
