--- a/src/assets/Style/Footer.module.scss
+++ b/src/assets/Style/Footer.module.scss
@@ -2,10 +2,62 @@
 @import '../Helpers/variabler';
 
 footer {
-    background-color: black;
-    position: sticky;
+    background-color: #F4D4C9;
 
-    width: 100%;
+    padding: 2% 0;
+    margin: 0 -10% -10%-10%;
+    text-align: center;
 
+    h4 {
+        margin-top: -0.5em;
+        color: white;
+    }
 
+    span {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    svg {
+
+        border: solid 1px white;
+        background-color: white;
+        color: #F4D4C9;
+        border-radius: 50%;
+        padding: 0.2em;
+        font-size: 1.5em;
+        cursor: pointer;
+
+        &:hover {
+            -webkit-animation: rotate-center 0.6s ease-in-out both;
+            animation: rotate-center 0.6s ease-in-out both;
+        }
+
+    }
+
+}
+
+@-webkit-keyframes rotate-center {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes rotate-center {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
