--- a/src/assets/Style/Portfolio.module.scss
+++ b/src/assets/Style/Portfolio.module.scss
@@ -1,6 +1,279 @@
-section {
+.portfolio {
     video {
         width: 20em;
         height: 20em;
+    }
+
+    img {
+        --b: 10px;
+        /* control the size */
+        padding: var(--b);
+        border: calc(2*var(--b)) solid #0000;
+        outline: 0.2em solid #000;
+        outline-offset: calc(-1*var(--b));
+        background: conic-gradient(from 90deg at 0.2em 0.2em, #0000 90deg, #000 0);
+        width: 30%;
+        height: 30%;
+    }
+
+
+    .projekt {
+        padding: 90px 0px;
+        font-family: 'Markazi Text', serif;
+
+        h2 {
+            text-align: center;
+        }
+
+        .gridGallery {
+            display: grid;
+            grid-template-columns: auto auto;
+            margin: auto;
+        }
+
+        img {
+            width: 30em;
+            height: 20em;
+
+            transition: 1s;
+        }
+
+        figure {
+            transition: 1s;
+
+
+            figure:hover {
+                transform: scale(1.1);
+                z-index: 2;
+
+
+            }
+
+            figcaption {
+                text-align: center;
+                padding: 1em;
+                color: #f7e7e1;
+                border-radius: 1em;
+                background-color: rgb(220, 129, 129);
+
+                h2 {
+                    padding-bottom: 0;
+                    margin-bottom: 0;
+                }
+
+                h3 {
+                    margin-top: 0;
+                    padding-top: 0;
+                }
+            }
+        }
+
+        span {
+            display: inline;
+            font-size: 2em;
+
+
+            svg {
+                border: solid 1px white;
+                background-color: white;
+                color: #F4D4C9;
+                border-radius: 50%;
+                padding: 0.2em;
+                margin: 0.2em;
+                cursor: pointer;
+
+                &:hover {
+                    -webkit-animation: rotate-center 0.6s ease-in-out both;
+                    animation: rotate-center 0.6s ease-in-out both;
+                }
+
+            }
+        }
+
+
+    }
+
+    .uddinfo {
+        .cardwrapper {
+            display: grid;
+            grid-template-columns: auto auto auto;
+            gap: 10%;
+            width: 100%;
+            margin-bottom: 10%;
+
+            // base
+            .flip {
+                position: relative;
+
+                h4 {
+                    text-align: center;
+                    font-size: 2em;
+                }
+
+                >.front,
+                >.back {
+                    display: block;
+                    transition-timing-function: cubic-bezier(.175, .885, .32, 1.275);
+                    transition-duration: .5s;
+                    transition-property: transform, opacity;
+                }
+
+                >.front {
+                    transform: rotateY(0deg);
+                }
+
+                >.back {
+                    position: absolute;
+                    opacity: 0;
+                    top: 0px;
+                    left: 0px;
+                    width: 100%;
+                    height: 100%;
+                    transform: rotateY(-180deg);
+                }
+
+                &:hover {
+                    >.front {
+                        transform: rotateY(180deg);
+                    }
+
+                    >.back {
+                        opacity: 1;
+                        transform: rotateY(0deg);
+                    }
+                }
+
+                &.flip-vertical {
+                    >.back {
+                        transform: rotateX(-180deg);
+                    }
+
+                    &:hover {
+                        >.front {
+                            transform: rotateX(180deg);
+                        }
+
+                        >.back {
+                            transform: rotateX(0deg);
+                        }
+                    }
+                }
+            }
+
+            // custom
+            .flip {
+                position: relative;
+                display: inline-block;
+                margin-right: 2px;
+                margin-bottom: 1em;
+                width: 100%;
+
+                >.front,
+                >.back {
+                    display: block;
+                    color: white;
+                    width: inherit;
+                    background-size: cover !important;
+                    background-position: center !important;
+                    height: 220px;
+                    padding: 1em 2em;
+                    background: #e3c3af;
+                    border-radius: 10px;
+
+                    p {
+                        font-size: 1em;
+                        line-height: 160%;
+                        color: white;
+                        text-align: center;
+
+                        b {
+                            color: rgb(220, 129, 129);
+
+                        }
+                    }
+                }
+            }
+
+
+
+
+
+        }
+    }
+
+    .fullwidth {
+        background-image: url(../Images/fullwidth.jpg);
+        background-size: cover;
+
+        padding: 5% 0;
+        margin-right: -10%;
+
+        margin-left: -10%;
+
+        div {
+            background-color: #f7e7e1;
+            border-radius: 10px;
+            width: 40%;
+            margin: auto;
+            padding: 5%;
+        }
+    }
+
+
+    .cv {
+        position: relative;
+
+        img {
+            --b: 10px;
+            /* control the size */
+            padding: var(--b);
+            border: calc(2*var(--b)) solid #0000;
+            outline: 0.2em solid #000;
+            outline-offset: calc(-1*var(--b));
+            background: conic-gradient(from 90deg at 0.2em 0.2em, #0000 90deg, #000 0);
+            width: 50%;
+            height: 50%;
+        }
+
+        a {
+            text-decoration: none;
+
+            background-color: white;
+            color: #F4D4C9;
+            border-radius: 50em;
+            padding: 0.5em;
+            margin: 0.2em;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #F4D4C9;
+                color: white;
+            }
+        }
+    }
+
+}
+
+@-webkit-keyframes rotate-center {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes rotate-center {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
